@@ -16,6 +16,9 @@
    - djm@cvs.openbsd.org 2004/06/13 15:16:54
      [regress/test-exec.sh]
      remove duplicate setting of $SCP; spotted by markus@
+   - dtucker@cvs.openbsd.org 2004/06/16 13:15:09
+     [regress/scp.sh]
+     Make scp -r tests use diff -rN not cmp (which won't do dirs.  ok markus@
  - (dtucker) [regress/test-exec.sh]
    Move Portable-only StrictModes to top of list to make syncs easier.
  - (dtucker) [regress/README.regress]
@@ -1245,4 +1248,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3395 2004/06/16 11:08:32 dtucker Exp $
+$Id: ChangeLog,v 1.3396 2004/06/16 13:22:37 dtucker Exp $
